# python-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
dfkassa/: __init__.py  constants.py  utils.py
dfkassa/watcher/: __init__.py  context.py  error.py  settings.py  url_builder.py
dfkassa/watcher/networks/: __init__.py  arbitrum.py  base.py  bsc.py  ethereum.py  goerli.py  optimism.py  polygon.py
tests/: test_sum.py
